# fl-demo

./: .gitmodules  pyproject.toml
real-cnn-torchvision/: client.ipynb  server.ipynb
real-sklearn/: client.ipynb  init.ipynb  pyproject.toml  server.ipynb
real-sklearn/stroke-prediction-dataset/: healthcare-dataset-stroke-data-0.csv  healthcare-dataset-stroke-data-1.csv  healthcare-dataset-stroke-data-2.csv  healthcare-dataset-stroke-data-3.csv
real-tensorflow-custom/: client.ipynb  prep.ipynb  pyproject.toml  server.ipynb
real-torch-torchvision/: client.ipynb  init.ipynb  pyproject.toml  server.ipynb
sim-tensorflow/: init.ipynb  pyproject.toml  sim.ipynb
