[tool.poetry]
name = "fl-demo"
version = "0.1.0"
description = ""
authors = ["drithh <adrielalfeus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flwr = "^1.10.0"
torch = "^2.4.0"
torchvision = "^0.19.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
