[tool.poetry]
name = "fl-demo-real-sklearn"
version = "0.1.0"
description = ""
authors = ["drithh <adrielalfeus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flwr = "^1.10.0"
scikit-learn = "^1.5.1"
flwr-datasets = "^0.3.0"
opendatasets = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
