[tool.poetry]
name = "fl-demo-real-tensorflow-custom"
version = "0.1.0"
description = ""
authors = ["drithh <adrielalfeus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flwr = "^1.10.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.17.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
