[tool.poetry]
name = "fl-demo-sim-tensorflow"
version = "0.1.0"
description = ""
authors = ["drithh <adrielalfeus@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flwr = {extras = ["simulation"], version = "^1.10.0"}
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.17.0"
flwr-datasets = {extras = ["vision"], version = "^0.3.0"}


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
